--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,13 @@
 <a href="#happy-birthday2">Happy Birthday v2</a><br />
 <a href="#birthday-pipe-chaining">Birthday Pipe Chaining</a><br />
 <a href="#power-booster">Power Booster custom pipe</a><br />
+<a href="#power-boost-calc">Power Boost Calculator custom pipe with params </a
+><br />
+<a href="#flying-heroes">Flying Heroes filter pipe (pure)</a><br />
+<a href="#flying-heroes-impure">Flying Heroes filter pipe (impure)</a><br />
+<a href="#hero-message">Async Hero Message and AsyncPipe</a><br />
+<a href="#hero-list">Hero List with caching FetchJsonPipe</a><br />
+
 <hr />
 <a id="happy-birthday1"></a>
 <h2>Hero Birthday v1</h2>
@@ -44,3 +51,11 @@
 <hr />
 <a id="power-boost-calc"></a>
 <app-power-boost-calculator>loading</app-power-boost-calculator>
+
+<hr />
+<a id="flying-heroes"></a>
+<app-flying-heroes></app-flying-heroes>
+
+<hr />
+<a id="flying-heroes-impure"></a>
+<app-flying-heroes-impure></app-flying-heroes-impure>
