--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,3 +59,8 @@
 <hr />
 <a id="flying-heroes-impure"></a>
 <app-flying-heroes-impure></app-flying-heroes-impure>
+
+<hr />
+<a id="hero-message"></a>
+<!-- async examples at the top so can see them in action -->
+<app-hero-message></app-hero-message>
