--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,3 +64,9 @@
 <a id="hero-message"></a>
 <!-- async examples at the top so can see them in action -->
 <app-hero-message></app-hero-message>
+
+<hr />
+<a id="hero-list"></a>
+<app-hero-list></app-hero-list>
+
+<div style="margin-top:12em;"></div>
